--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
-#color_input {
-  width: 10vw;
+#container {
+  background-color: whitesmoke;
+  padding: 10px;
+  border: 1px solid black;
+  width: 150px;
+}
+
+#colorbox {
+  border: 1px solid black;
+  width: 100px;
+  height: 100px;
+  margin: 5px 0;
 }
