--- a/style.css
+++ b/style.css
@@ -2,12 +2,23 @@
   background-color: whitesmoke;
   padding: 10px;
   border: 1px solid black;
-  width: 150px;
+  width: 90vw;
 }
 
-#colorbox {
-  border: 1px solid black;
+.box_container {
   width: 100px;
-  height: 100px;
+  margin: 50px;
+}
+
+.colorbox {
+  border: 1px solid black;
+  border-radius: 20px;
+  width: 150px;
+  height: 150px;
   margin: 5px 0;
+}
+
+#boxes_container {
+  display: flex;
+  flex-wrap: wrap;
 }
